Kafka producer-consumer with avro schema with playwright testcases