@@ -203,9 +203,6 @@
                     <version>${maven-compiler-plugin.version}</version>
                     <configuration>
                         <release>${java.version}</release>
-                        <compilerArgs>
-                            <arg>--enable-preview</arg>
-                        </compilerArgs>
                     </configuration>
                 </plugin>
 
@@ -229,9 +226,6 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven-surefire-plugin.version}</version>
-                    <configuration>
-                        <argLine>--enable-preview</argLine>
-                    </configuration>
                 </plugin>
 
                 <!-- Failsafe Plugin for Integration Tests -->
@@ -239,9 +233,6 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-failsafe-plugin</artifactId>
                     <version>${maven-failsafe-plugin.version}</version>
-                    <configuration>
-                        <argLine>--enable-preview</argLine>
-                    </configuration>
                 </plugin>
 
                 <!-- Jib Plugin for Container Building -->
@@ -258,7 +249,6 @@
                         </to>
                         <container>
                             <jvmFlags>
-                                <jvmFlag>--enable-preview</jvmFlag>
                                 <jvmFlag>-XX:+UseZGC</jvmFlag>
                                 <jvmFlag>-XX:+UnlockExperimentalVMOptions</jvmFlag>
                                 <jvmFlag>-XX:+UseVirtualThreads</jvmFlag>
